--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     </style>
 </head>
 <body>
-<div id="app">
+<div id="app"> 
     <div id="title">
         <img src="/public/logo.png">
         <h1>Vue.js Cinema</h1>
     </div>
     <div id="overview">
         <div class="main">
-            <movie-list v-bind:genre="genre" v-bind:time="time"></movie-list> 
+            <movie-list v-bind:genre="genre" v-bind:time="time" v-bind:movies="movies"></movie-list> 
             <movie-filter v-on:check-filter="checkFilter"></movie-filter> 
         </div>
     </div>
